[gd_scene load_steps=5 format=3 uid="uid://dc7vyxhbcnx8h"]

[ext_resource type="Script" uid="uid://ds1j36iswek1b" path="res://scripts/grid/Grid3D.gd" id="1_qbsmt"]
[ext_resource type="Script" uid="uid://b23tkqg11tve0" path="res://scripts/gameplay/TurnSystem.gd" id="2_cpr0p"]
[ext_resource type="Script" uid="uid://crocn5tfnj8lb" path="res://ui/HUD.gd" id="3_cpr0p"]
[ext_resource type="Script" uid="uid://co7dgitetubps" path="res://scripts/gameplay/Battle.gd" id="4_78awf"]

[node name="Game" type="Node3D"]

[node name="Board" type="Node3D" parent="."]
script = ExtResource("1_qbsmt")

[node name="TurnSystem" type="Node" parent="."]
script = ExtResource("2_cpr0p")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.5, -0.5, 0.707107, 0.707107, 0.707107, 0, -0.5, 0.5, 0.707107, 0, 0, 0)
shadow_enabled = true

[node name="IsoCamera" type="Camera3D" parent="."]
transform = Transform3D(0.707107, -0.40558, 0.579228, 0, 0.819152, 0.573576, -0.707107, -0.40558, 0.579228, 12, 14, 12)
projection = 1
current = true
size = 18.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_cpr0p")

[node name="TurnLabel" type="Label" parent="UI/HUD"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Turn:"

[node name="EndTurnBtn" type="Button" parent="UI/HUD"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Battle" type="Node" parent="."]
script = ExtResource("4_78awf")

[connection signal="pressed" from="UI/HUD/EndTurnBtn" to="Board" method="_on_end_turn_pressed"]
